--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,12 @@
-# config BD
-spring.datasource.url=jdbc:mysql://localhost:3306/ventasfacil?serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=12345
-spring.datasource.initialization-mode=always
-spring.datasource.schema=classpath:database-script/init-ventasfacil.sql
-
-# config jpa
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.show.sql=true
-spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-
 # ThymeLeaf
 spring.thymeleaf.template-loader-path: classpath:/templates
 spring.thymeleaf.template.suffix: .html
 spring.thymeleaf.cache: false
+
+# Config CORS
+spring.web.cors.enabled=true
+spring.web.cors.allowed-origins=*
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.web.cors.allowed-headers=*
+spring.web.cors.allow-credentials=true
+spring.web.cors.max-age=3600
